[package]
authors = ["Matt Spencer <matthew@thespencers.me.uk>"]
edition = "2024"
name = "rp2040-embassy"
version = "0.1.0"

[dependencies]
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = "0.9"

embedded-io-async = { version = "0.7.0", features = ["defmt"] }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

noline = { path="../../../noline/" }
format_no_std = "1.2.0"
fixed-queue = "0.5.1"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
debug = 2
