[package]
name = "rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
embedded-io = "0.7.1"
rp-pico = "0.9.0"
usb-device = "0.3.2"
usbd-hid = "0.10.0"
usbd-serial = "0.2.2"
heapless = "0.9.2"
defmt = "1.0"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
format_no_std = "1.2.0"

noline = { path = "../../../noline" }
